[package]
name = "skr"
version = "0.1.0"
authors = ["Sabree Blackmon <sabree@heavypackets.sh>"]

[dependencies]
pest = "2.0"
pest_derive = "2.0"
failure = ">=0.1.2"
failure_derive = ">=0.1.2"
serde = { version = "1", features = ["serde_derive"] }
ron = "0.4"

[dev-dependencies]
indoc = "0.2"
assert_matches = "1.3"
lazy_static = "1.1.0"